--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rediscover.city - Walk the streets. Hear their stories.</title>
+    <title>rediscover.city - Walk the streets. Hear their stories.</title>
     <meta name="description" content="AI-powered mobile app that narrates fascinating stories about your city as you walk. Discover hidden history, culture, and secrets with every step." />
-    <meta name="author" content="Rediscover.city" />
+    <meta name="author" content="rediscover.city" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
